# opentelemetry-demo

./: .env  Makefile  README.md  SKAFFOLD.md  compose.yaml  docker-compose.yml  skaffold.yaml
.github/workflows/: build-images.yml  build-push-ghr-no-otel.yml  sync-upstream.yml
kubernetes/: opentelemetry-demo.yaml
src/accounting/: Accounting.csproj  Consumer.cs  Dockerfile  README.md
src/ad/: Dockerfile  build.gradle  settings.gradle
src/agent/: run.py
src/chatbot/: run.py
src/checkout/: Dockerfile  go.mod  go.sum  main.go
src/currency/: CMakeLists.txt  Dockerfile
src/currency/genproto/: Dockerfile
src/currency/src/: server.cpp
src/email/: Dockerfile  Gemfile  email_server.rb
src/flagd-ui/: Dockerfile  mix.exs
src/fraud-detection/: Dockerfile  build.gradle.kts
src/frontend/: Dockerfile  Dockerfile.cypress  README.md  next.config.js  package-lock.json  package.json
src/frontend-proxy/: Dockerfile  envoy.tmpl.yaml
src/image-provider/: Dockerfile  nginx.conf.template
src/kafka/: Dockerfile
src/shipping/: Cargo.toml  Dockerfile  README.md
src/shipping/src/: main.rs
src/shipping/src/shipping_service/: quote.rs
sync/: README.md  base_image_mirror.py  config.py  deletions.py  gitops.py  last_synced.json  llm.py  lockfiles.py  otel_rules.py  report.py  requirements-sync.txt  residual_scan.py  sync.py
tests/: conftest.py  pytest.ini  test_compose_health.py  test_deploy_consistency.py  test_docker_build.py  test_e2e_cypress.py  test_go_unit.py  test_kubernetes_dry_run.py  test_local_images.py  test_otel_absence.py  test_startup_errors.py
(+82 files in other folders)
