[package]
name = "shipping"
edition = "2021"

[[bin]]
name = "shipping"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.100"
awc = { version = "3.8.1", default-features = false, features = ["compress-zstd"] }
json-subscriber = "0.2.6"
serde = { version = "1.0.228", features = ["derive"] }
tonic = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
